[gd_scene load_steps=13 format=3 uid="uid://78tsdgocafh"]

[ext_resource type="Texture2D" uid="uid://cu5q0ror77dby" path="res://assets/img/door_ctrl_sheet.png" id="1_l8yec"]
[ext_resource type="Texture2D" uid="uid://biu30j2g7qmya" path="res://assets/img/special_effect_board.png" id="2_ijxhd"]
[ext_resource type="Script" path="res://scenes/door_ctrl/scripts/door_ctrl.gd" id="2_kbtpi"]
[ext_resource type="AudioStream" uid="uid://dv74nppyqrr4o" path="res://assets/sound/input_passwd_right.wav" id="4_tx3nh"]
[ext_resource type="AudioStream" uid="uid://dnunu2vs4w12c" path="res://assets/sound/input_passwd_error.wav" id="5_bpm88"]
[ext_resource type="Texture2D" uid="uid://tnhhsjx73col" path="res://assets/img/progress_under.png" id="6_8gqon"]
[ext_resource type="AudioStream" uid="uid://bj118cmukalla" path="res://assets/sound/input_passwd.wav" id="6_u18rg"]
[ext_resource type="Texture2D" uid="uid://b1dyl8752ln8j" path="res://assets/img/progress_progress.png" id="7_8yfyx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s2k7c"]
atlas = ExtResource("1_l8yec")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_styw4"]
atlas = ExtResource("1_l8yec")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xksha"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2k7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_styw4")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4q2of"]
size = Vector2(11, 18)

[node name="DoorCtrl" type="AnimatedSprite2D"]
z_index = 5
sprite_frames = SubResource("SpriteFrames_xksha")
script = ExtResource("2_kbtpi")

[node name="Lights" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="Lights"]
position = Vector2(-14.5, 2.5)
scale = Vector2(0.000999999, 0.015)
texture = ExtResource("2_ijxhd")

[node name="PointLight2D2" type="PointLight2D" parent="Lights"]
position = Vector2(-12.5, -3)
scale = Vector2(0.001, 0.006)
texture = ExtResource("2_ijxhd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-10.5, 2)
shape = SubResource("RectangleShape2D_4q2of")

[node name="InputRight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tx3nh")
bus = &"Effect"

[node name="InputError" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bpm88")
bus = &"Effect"

[node name="Input" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_u18rg")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
z_index = 5
offset_left = -8.0
offset_top = -6.0
offset_right = 32.0
offset_bottom = 34.0
scale = Vector2(0.5, 0.5)
fill_mode = 3
texture_under = ExtResource("6_8gqon")
texture_progress = ExtResource("7_8yfyx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="value_changed" from="TextureProgressBar" to="." method="_on_texture_progress_bar_value_changed"]
